infrastructure/istio-manifest/frontend-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: frontend-gateway
  namespace: frontend
spec:
  selector:
    istio: ingress-gateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - poc-istio-fe.local
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: frontend-gateway-tls
      hosts:
        - poc-istio-fe.local
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: frontend
  namespace: frontend
spec:
  hosts:
    - poc-istio-fe.local
  gateways:
    - istio-system/frontend-gateway
  http:
    - match:
        - port: 80
      redirect:
        scheme: https
        redirectCode: 301
    - route:
        - destination:
            host: frontend-service.frontend.svc.cluster.local
            port:
              number: 80
